--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ body{
     top: 30%;
     width: 40%;
     font-size: 1.3em;
-    padding-left: 1cm;
+    padding-left:;
     padding-top: 0.5cm;
     background-color: white;
 }
@@ -54,7 +54,7 @@ body{
     top: 30%;
     width: 40%;
     font-size: 1.3em;
-    padding-left: 1cm;
+    padding-left:;
     padding-top: 5mm;
     background-color: white;
 }
