--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@ h1{
             <h2>PERSONAL INFO</h2>
             <label for="name">Name</label>
             <input type="text" name="Name" placeholder="Name(Required)" required><br>
-            <label for="DOB">DOB</label>
-            <input type="date" name="DOB" placeholder="" id=""><br>
+            <label for="DOB">Age</label>
+            <input type="number" name="DOB" placeholder="" id=""><br>
             <label for="address">Address</label>
             <textarea placeholder="Enter your address" name="address"></textarea><br>
             <label for="Gender">Gender:</label>
