--- a/index.html
+++ b/index.html
@@ -92,6 +92,48 @@ h1{
 .file2 label{
     margin-right: 1cm;
 }
+@media only screen and (max-width: 400px){
+.brand-img{
+    position: absolute;
+    left: 5%;
+    top: 1%;
+    width: 7em;
+    height: 5em;
+
+}
+.header h3{
+    position: absolute;
+    left: 30%;
+    top: 6%;
+    font-size: 1.5em;
+}
+.file{
+    left: 0.1%;
+    width: 90vw;
+    position: absolute;
+    top: 15%;
+}
+.file2{
+    width: 90vw;
+    position: absolute;
+    top: 110%;
+    left: 1%;
+}
+.save{
+    position: absolute;
+    left: 1%;
+    top: 200%;
+}
+.attachment{
+    position: absolute;
+    left: 0.1%;
+    top: 300%;
+    width: 99vw;
+}
+textarea{
+    width: 80vw;
+}
+}
     </style>
     <meta charset="UTF-8">
 
@@ -255,7 +297,7 @@ h1{
 
         </div>
     </form>
-   </div> 
+</div> 
 
    <script>
     function showImage(src,target) {
