--- a/index.html
+++ b/index.html
@@ -109,26 +109,27 @@ h1{
 }
 .file{
     left: 0.1%;
-    width: 90vw;
+    width: 99vw;
     position: absolute;
     top: 15%;
 }
 .file2{
-    width: 90vw;
+    left:0.1%;
+    width: 99vw;
     position: absolute;
-    top: 110%;
+    top: 130%;
     left: 1%;
 }
 .save{
     position: absolute;
     left: 1%;
-    top: 200%;
+    top: 230%;
 }
 .attachment{
     position: absolute;
     left: 0.1%;
-    top: 300%;
-    width: 99vw;
+    top: 250%;
+    width: 98vw;
 }
 textarea{
     width: 80vw;
