--- a/index.html
+++ b/index.html
@@ -104,18 +104,19 @@ h1{
 .header h3{
     position: absolute;
     left: 30%;
+    text-decoration:underline;
     top: 6%;
     font-size: 1.5em;
 }
 .file{
     left: 0.1%;
-    width: 99vw;
+    width: 98vw;
     position: absolute;
     top: 15%;
 }
 .file2{
     left:0.1%;
-    width: 99vw;
+    width: 98vw;
     position: absolute;
     top: 130%;
     left: 1%;
