--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@ h1{
     margin-right: 1cm;
 }
 @media only screen and (max-width: 450px){
+    body{
+        width:100vw;}
 .brand-img{
     position: absolute;
     left: 5%;
